# Coursework

./: Homework for 'Machine learning with Python' course.ipynb  README.md  pyproject.toml
