[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
xlrd = "1.1.0"
setuptools = "^62.1.0"
numpy = "^1.22.4"
pandas = "^1.4.2"
nltk = "^3.7"
Appium-Python-Client = "^2.4.0"
pure-python-adb = "^0.3.0-alpha.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
